# DBConverter

./: .gitattributes  CMakeLists.txt  readme.md
cmake/: FetchGTest.cmake  FetchJSON.cmake  FetchSQLite.cmake
examples/: MOCK_DATA.db  MOCK_DATA.json  disoccupazione.csv  disoccupazione.db  pakistan_economic_indicators_2000_2025.db  pokemonDB_dataset_converted.db  pokemonDB_dataset_converted.json
scripts/: help.py  run_tests.py
src/: main.cpp
src/database/: db_manager.cpp  db_manager.h
src/models/: data_row.cpp  data_row.h  table_schema.cpp  table_schema.h
src/parsers/: csv_parser.cpp  csv_parser.h  json_parser.cpp  json_parser.h
src/utils/: file_validator.cpp  file_validator.h  string_utils.cpp  string_utils.h  type_converter.cpp  type_converter.h
tests/: test_csv_parser.cpp  test_db_manager.cpp  test_integration.cpp  test_json_parser.cpp  test_string_utils.cpp  test_type_converter.cpp
tests/test_data/: basic.csv  basic.json  booleans.csv  booleans.json  duplicate_headers.csv  mismatched.csv  nested_array.json  nested_object.json  nulls.csv  nulls.json  primitive_array.json  quoted.csv  single_object.json
